--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(255, 254, 254);
 }
 
 .container {
@@ -8,4 +8,17 @@ body {
   justify-content: center;
   text-align: center;
   flex-direction: column;
+}
+
+.container h1 {
+  font-family: "Hanalei Fill", cursive;
+  color: rgb(65, 207, 0);
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.icon {
+  width: 80px;
+  height: 80px;
+  color: rgb(65, 207, 0);
 }
